--- a/stylez.css
+++ b/stylez.css
@@ -3,7 +3,7 @@
 /* General styling for the entire page */
 body {
     font-family: Arial, sans-serif;
-    background-color: blue;
+    background-color: light-blue;
     margin: 0;
     
 }
